VSE - Scene strip soft cut at start frame gives incorrect results #53478

Closed
opened 2017-12-06 04:23:48 +01:00 by Campbell Barton · 6 comments

Open the attached file and press K in the sequence space.

Notice the error on channels one and two. Related to #53430 - but this bug existed before the fix.

The error is only when scenes have a start-still and the cut is exactly one frame afterwards.

vse_cut.blend

Open the attached file and press K in the sequence space. Notice the error on channels one and two. Related to #53430 - but this bug existed before the fix. The error is only when scenes have a start-still and the cut is exactly one frame afterwards. [vse_cut.blend](https://archive.blender.org/developer/F1313905/vse_cut.blend)
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Campbell Barton changed title from VSE - VSE - Scene strip soft cut at start frame gives incorrect results to VSE - Scene strip soft cut at start frame gives incorrect results 2017-12-06 06:09:01 +01:00
tabletopcalendarprinting commented 2017-12-07 08:13:17 +01:00 (Migrated from localhost:3001)

Added subscriber: @tabletopcalendarprinting

Added subscriber: @tabletopcalendarprinting
tabletopcalendarprinting commented 2017-12-07 08:13:17 +01:00 (Migrated from localhost:3001)

This comment was removed by @tabletopcalendarprinting

*This comment was removed by @tabletopcalendarprinting*

This issue was referenced by f3018322c0

This issue was referenced by f3018322c097fe9893f73e2f66c1cd87ed30660c
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53478
No description provided.